--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,9 @@
     "start": "node server"
   },
   "dependencies": {
-    "classlist.js": "^1.1.20150312",
     "compression": "^1.6.0",
     "express": "^4.14.1",
     "log4js": "^0.6.27",
-    "mdn-polyfills": "^3.5.0",
-    "nconf": "^0.8.0",
-    "web-animations-js": "^2.2.5"
+    "nconf": "^0.8.0"
   }
 }
