--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
