--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-# docker build -t expassauth -f node.dockerfile .
+# docker build -t angpassauth .
 # docker login
-# docker tag expassauth tumbone/expassauth:2.1.0
-# docker push tumbone/expassauth:2.1.0
-# docker run -p 3000:3000 tumbone/expassauth:2.1.0
+# docker tag expassauth tumbone/angpassauth
+# docker push tumbone/angpassauth
+# docker run -p 3001:3001 tumbone/angpassauth
 
 # docker machine env myvm1
 # & "C:\Program Files\Docker\Docker\Resources\bin\docker-machine.exe" env myvm1 | Invoke-Expression
